--- a/paginaWeb.html
+++ b/paginaWeb.html
@@ -9,10 +9,7 @@
   <body>
     <header>
       <img src="assets/logo.png" alt="logo.png" />
-      <div id="giallo">
-        <hr />
-        <p>part of <span>A SIMPLY FABULOUS THANKSGIVING</span></p>
-      </div>
+      <p>part of <span>A SIMPLY FABULOUS THANKSGIVING</span></p>
     </header>
 
     <main>
@@ -28,7 +25,7 @@
       </div>
       <div id="left">
         <div id="linea">
-          <p class="p-1">FEATURED IN:</p>
+          <p>FEATURED IN:</p>
           <p class="p-2">Fresh Cranberry Recipes That Go Beyond Sauce</p>
         </div>
 
